# jtag-boundary-scanner

./: README.md  Release-notes.txt
.github/workflows/: InterfaceSWIG.yml  ccpp.yml
docs/scripts/: script_engine_test.txt
jtag_boundary_scanner_gui/win32/: JTAGBoundaryScanner.c  JTAGBoundaryScanner.h  JTAGBoundaryScanner.rc  fileselector.c  fileselector.h  resource.h  script.c  script.h  socket.c  socket.h  version.rc
jtag_boundary_scanner_gui/win32/JTAGBoundaryScanner/: JTAGBoundaryScanner.sln
jtag_boundary_scanner_gui/win32/JTAGBoundaryScanner/JTAGBoundaryScanner/: JTAGBoundaryScanner.vcxproj  JTAGBoundaryScanner.vcxproj.filters
jtag_boundary_scanner_gui/win32/JTAGBoundaryScanner_VC6/: JTAGBOUNDARYSCANNER.DSW  JTAGBoundaryScanner.dsp
lib_jtag_core/: CMakeLists.txt
lib_jtag_core/src/: CMakeLists.txt  config.script  config_script.h  dbg_logs.c  dbg_logs.h  jtag_core.c  jtag_core.h  jtag_core_internal.h  jtag_emu.c  libjtag_bsdl.h  version.h
lib_jtag_core/src/bsdl_parser/: bsdl_loader.c  bsdl_loader.h  bsdl_strings.c  bsdl_strings.h  jtag_bsdl.c  jtag_bsdl.cc  jtag_bsdl.h
lib_jtag_core/src/bus_over_jtag/: i2c_over_jtag.c  mdio_over_jtag.c  memory_over_jtag.c  spi_over_jtag.c
lib_jtag_core/src/drivers/: drivers_list.c  drivers_list.h  drv_loader.c  drv_loader.h
lib_jtag_core/src/drivers/ftdi_jtag/: ftdi_jtag_drv.c  ftdi_jtag_drv.h
lib_jtag_core/src/drivers/ftdi_jtag/ftdi/: WinTypes.h  ftd2xx.h
lib_jtag_core/src/drivers/jlink_jtag/: jlink_jtag_drv.c  jlink_jtag_drv.h
lib_jtag_core/src/drivers/linux_gpio_jtag/: linux_gpio_jtag_drv.c  linux_gpio_jtag_drv.h
lib_jtag_core/src/drivers/lpt_jtag/: lpt_jtag_drv.c  lpt_jtag_drv.h
lib_jtag_core/src/natsort/: strnatcmp.c
lib_jtag_core/src/os_interface/: fs.c  network.c  network.h  os_interface.c  os_interface.h
lib_jtag_core/src/os_interface/win32/: libjtagcore.def  libjtagcore.rc  stdint.h
lib_jtag_core/src/script/: env.c  env.h  script.c  script.h
lib_jtag_core/test/: CMakeLists.txt
lib_jtag_core/test/apps/: CMakeLists.txt
lib_jtag_core/test/apps/cxx/: CMakeLists.txt  cppUI.cxx
lib_jtag_core/test/apps/cxx/bindings/: CMakeLists.txt  xcSwigHere.cxx  xcSwigHere.h
lib_jtag_core/test/apps/py3/: CMakeLists.txt  py3UI.py
lib_jtag_core/test/apps/py3/bindings/: CMakeLists.txt  init.in  py3SwigHere.cxx  py3SwigHere.h  py3SwigHere.i
lib_jtag_core/test/imports/: CMakeLists.txt  epCoreJTAG.cxx  epSwigHere.h  uiCoreJTAG.cxx
lib_jtag_core/test/linux/: BSDLtoFloorplan.c  BSDLtoFloorplan.cpp  CMakeLists.txt  Makefile
